--- a/app/src/main/res/layout/widget_base_navigation.xml
+++ b/app/src/main/res/layout/widget_base_navigation.xml
@@ -1,36 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fl_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <FrameLayout
+    <RelativeLayout
+        android:id="@+id/rl_positive"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/pt128_navigation">
+        android:layout_height="42dp"
+        android:background="@color/white">
 
         <ImageView
-            android:id="@+id/iv_back"
+            android:id="@+id/iv_positive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="12dp"
             android:src="@drawable/ic_chevron_left_black_36dp" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/iv_negative_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/iv_negative"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_positive"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:visibility="gone"
+            tools:text="左文字" />
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textColor="@color/colorPrimaryText"
+            android:layout_centerInParent="true"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxEms="10"
+            android:singleLine="true"
+            android:textColor="@color/black"
             android:textSize="16sp"
-            tools:text="标题文字" />
+            tools:text="标题" />
+
+        <TextView
+            android:id="@+id/tv_negative"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:paddingLeft="34pt"
+            android:paddingRight="34pt"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="28sp"
+            android:visibility="gone"
+            tools:text="右文字" />
+
+        <TextView
+            android:id="@+id/tv_positive_icon_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/iv_positive"
+            android:gravity="center"
+            android:textColor="@color/colorPrimaryText"
+            android:textSize="14sp"
+            tools:text="关闭" />
 
         <View
             android:id="@+id/view_divider"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/pt1_divider"
-            android:layout_gravity="bottom"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
             android:background="@color/colorDivider" />
 
-    </FrameLayout>
+    </RelativeLayout>
 
 </FrameLayout>
