--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <!-- 分割线的宽度 -->
     <dimen name="pt1_divider">1pt</dimen>
     <dimen name="pt128_navigation">128pt</dimen>
+    <dimen name="pt12_margin">12pt</dimen>
 
 </resources>
