--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="250pt"
+    android:background="@color/white"
     android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/tv_source"
+        android:layout_width="300pt"
+        android:layout_height="200pt"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/margin_48pt"
+        android:background="@drawable/background_corners_12pt_cf5f5f5"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textSize_16sp"
+        android:textStyle="bold"
+        tools:text="掘金" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_48pt"
-        android:layout_marginTop="@dimen/margin_24pt"
-        android:layout_marginRight="@dimen/margin_48pt"
+        android:layout_alignTop="@id/tv_source"
+        android:layout_marginLeft="@dimen/margin_24pt"
+        android:layout_toRightOf="@id/tv_source"
         android:ellipsize="end"
         android:lineSpacingExtra="@dimen/lineSpacingExtra_7pt"
         android:maxLines="2"
@@ -22,9 +36,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_48pt"
-        android:layout_marginTop="@dimen/margin_24pt"
-        android:layout_marginRight="@dimen/margin_48pt"
+        android:layout_alignBottom="@id/tv_source"
+        android:layout_marginLeft="@dimen/margin_24pt"
+        android:layout_toRightOf="@id/tv_source"
         android:orientation="horizontal">
 
         <TextView
@@ -32,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorSecondaryText"
-            android:textSize="@dimen/textSize_14sp"
+            android:textSize="@dimen/textSize_12sp"
             tools:text="作者:  我是一坨焦" />
 
         <TextView
@@ -41,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_24pt"
             android:textColor="@color/colorSecondaryText"
-            android:textSize="@dimen/textSize_14sp"
+            android:textSize="@dimen/textSize_12sp"
             tools:text="时间 ：昨天" />
 
     </LinearLayout>
@@ -49,7 +63,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_1pt"
+        android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/margin_24pt"
         android:background="@color/colorDivider" />
 
-</LinearLayout>
+</RelativeLayout>
