--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -12,7 +12,7 @@
         android:layout_height="200pt"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/margin_48pt"
-        android:background="@drawable/background_corners_12pt_cf5f5f5"
+        android:background="@drawable/background_corners_12pt_color_primary"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="@dimen/textSize_16sp"
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/tv_source"
         android:layout_marginLeft="@dimen/margin_24pt"
+        android:layout_marginRight="@dimen/margin_48pt"
         android:layout_toRightOf="@id/tv_source"
         android:ellipsize="end"
         android:lineSpacingExtra="@dimen/lineSpacingExtra_7pt"
