--- a/app/src/main/res/layout/widget_base_navigation.xml
+++ b/app/src/main/res/layout/widget_base_navigation.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:src="@drawable/ruturn" />
+        android:src="@drawable/ic_keyboard_arrow_left_black_48dp" />
 
     <View
         android:layout_width="match_parent"
