--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -4,108 +4,177 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="980pt"
-        android:layout_height="500pt"
-        android:layout_gravity="center"
-        app:cardBackgroundColor="@color/white"
-        app:cardElevation="@dimen/corner_12pt">
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="64pt"
-                android:layout_marginLeft="@dimen/margin_48pt"
-                android:layout_marginTop="@dimen/margin_48pt"
-                android:layout_marginRight="@dimen/margin_48pt"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="48pt"
-                    android:layout_height="48pt"
-                    android:src="@drawable/icon_login_head" />
-
-                <EditText
-                    android:id="@+id/et_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_24pt"
-                    android:background="@color/white"
-                    android:hint="用户名"
-                    android:maxLength="20"
-                    android:singleLine="true"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textColorHint="@color/colorSecondaryText"
-                    android:textCursorDrawable="@drawable/shape_text_cursor_drawable"
-                    android:textSize="@dimen/textSize_14sp" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/divider_1pt"
-                android:layout_marginLeft="@dimen/margin_48pt"
-                android:layout_marginTop="@dimen/margin_24pt"
-                android:layout_marginRight="@dimen/margin_48pt" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="880pt"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="@dimen/margin_12pt"
+            app:cardElevation="@dimen/corner_12pt">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="64pt"
-                android:layout_marginLeft="@dimen/margin_48pt"
-                android:layout_marginTop="@dimen/margin_48pt"
-                android:layout_marginRight="@dimen/margin_48pt"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="48pt"
-                    android:layout_height="48pt"
-                    android:src="@drawable/icon_login_password" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="96pt"
+                    android:layout_marginLeft="@dimen/margin_48pt"
+                    android:layout_marginTop="@dimen/margin_48pt"
+                    android:layout_marginRight="@dimen/margin_48pt"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/et_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_24pt"
-                    android:background="@color/white"
-                    android:hint="密码"
-                    android:inputType="textPassword"
-                    android:maxLength="20"
-                    android:singleLine="true"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textColorHint="@color/colorSecondaryText"
-                    android:textCursorDrawable="@drawable/shape_text_cursor_drawable"
-                    android:textSize="@dimen/textSize_14sp" />
+                    <ImageView
+                        android:layout_width="74pt"
+                        android:layout_height="74pt"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/icon_login_head" />
 
-            </LinearLayout>
+                    <EditText
+                        android:id="@+id/et_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/margin_24pt"
+                        android:background="@color/white"
+                        android:hint="用户名"
+                        android:maxLength="20"
+                        android:singleLine="true"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textColorHint="@color/colorSecondaryText"
+                        android:textCursorDrawable="@drawable/shape_text_cursor_drawable"
+                        android:textSize="@dimen/textSize_16sp" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/divider_1pt"
-                android:layout_marginLeft="@dimen/margin_48pt"
-                android:layout_marginTop="@dimen/margin_24pt"
-                android:layout_marginRight="@dimen/margin_48pt" />
+                </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_login"
-                android:layout_width="800pt"
-                android:layout_height="@dimen/navigation_128pt"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="@dimen/corner_12pt">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/divider_1pt"
+                    android:layout_marginLeft="@dimen/margin_48pt"
+                    android:layout_marginTop="@dimen/margin_24pt"
+                    android:layout_marginRight="@dimen/margin_48pt"
+                    android:layout_marginBottom="@dimen/margin_24pt"
+                    android:background="@color/colorDivider" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="96pt"
+                    android:layout_marginLeft="@dimen/margin_48pt"
+                    android:layout_marginRight="@dimen/margin_48pt"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="64pt"
+                        android:layout_height="64pt"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/icon_login_password" />
+
+                    <EditText
+                        android:id="@+id/et_password"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/margin_24pt"
+                        android:background="@color/white"
+                        android:hint="密码"
+                        android:inputType="textPassword"
+                        android:maxLength="20"
+                        android:singleLine="true"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textColorHint="@color/colorSecondaryText"
+                        android:textCursorDrawable="@drawable/shape_text_cursor_drawable"
+                        android:textSize="@dimen/textSize_16sp" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/divider_1pt"
+                    android:layout_marginLeft="@dimen/margin_48pt"
+                    android:layout_marginTop="@dimen/margin_24pt"
+                    android:layout_marginRight="@dimen/margin_48pt"
+                    android:layout_marginBottom="@dimen/margin_24pt"
+                    android:background="@color/colorDivider" />
+
+
+                <LinearLayout
+                    android:id="@+id/ll_repassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="96pt"
+                    android:layout_marginLeft="@dimen/margin_48pt"
+                    android:layout_marginRight="@dimen/margin_48pt"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="64pt"
+                        android:layout_height="64pt"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/icon_login_password" />
+
+                    <EditText
+                        android:id="@+id/et_repassword"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/margin_24pt"
+                        android:background="@color/white"
+                        android:hint="请再次输入密码"
+                        android:inputType="textPassword"
+                        android:maxLength="20"
+                        android:singleLine="true"
+                        android:textColor="@color/colorPrimaryText"
+                        android:textColorHint="@color/colorSecondaryText"
+                        android:textCursorDrawable="@drawable/shape_text_cursor_drawable"
+                        android:textSize="@dimen/textSize_16sp" />
+
+                </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_login_register"
+                    android:layout_width="740pt"
+                    android:layout_height="@dimen/navigation_96pt"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/margin_48pt"
+                    android:layout_marginBottom="@dimen/margin_48pt"
+                    app:cardBackgroundColor="@color/colorAccent"
+                    app:cardCornerRadius="@dimen/corner_12pt"
+                    app:cardElevation="@dimen/corner_12pt">
+
+                    <TextView
+                        android:id="@+id/tv_login_register_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="登录"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/textSize_16sp" />
+
+                </androidx.cardview.widget.CardView>
 
                 <TextView
+                    android:id="@+id/tv_login_register"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_48pt"
+                    android:layout_marginBottom="@dimen/margin_48pt"
+                    android:text="注册"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/textSize_16sp" />
 
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
+    </FrameLayout>
 
 </FrameLayout>
