--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -30,7 +30,7 @@
         android:ellipsize="end"
         android:lineSpacingExtra="@dimen/lineSpacingExtra_7pt"
         android:maxLines="2"
-        android:textColor="@color/colorPrimaryText"
+        android:textColor="@color/textColorPrimary"
         android:textSize="@dimen/textSize_16sp"
         tools:text="这个是文章的标题大概可以显示两行吧" />
 
@@ -46,7 +46,7 @@
             android:id="@+id/tv_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorSecondaryText"
+            android:textColor="@color/textColorSecond"
             android:textSize="@dimen/textSize_12sp"
             tools:text="作者:  我是一坨焦" />
 
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_24pt"
-            android:textColor="@color/colorSecondaryText"
+            android:textColor="@color/textColorSecond"
             android:textSize="@dimen/textSize_12sp"
             tools:text="时间 ：昨天" />
 
