--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,13 +6,13 @@
     <color name="colorPrimaryDark">#55ff5722</color>
     <color name="colorAccent">#ff5722</color>
     <!-- 字体的主要颜色 -->
-    <color name="colorPrimaryText">#333333</color>
+    <color name="textColorPrimary">#333333</color>
     <!-- 字体的次要颜色 -->
-    <color name="colorSecondaryText">#666666</color>
+    <color name="textColorSecond">#666666</color>
     <!-- 字体的第三种颜色 -->
-    <color name="colorThirdText">#999999</color>
+    <color name="textColorThird">#999999</color>
     <!-- 提示字体的颜色 -->
-    <color name="colorHintText">#666666</color>
+    <color name="colorTextHint">#666666</color>
     <!-- 分割线颜色 -->
     <color name="colorDivider">#f2f2f2</color>
     <!-- 背景颜色 -->
