添加请求中添加cookie

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,21 +5,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="拍照" />
+            android:id="@+id/nav_collect"
+            android:icon="@drawable/ic_exit_to_app_black_24dp"
+            android:title="退出" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="拍照" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="拍照" />
-        <item
-            android:id="@+id/nav_tools"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="拍照" />
+            android:id="@+id/nav_exit"
+            android:icon="@drawable/ic_exit_to_app_black_24dp"
+            android:title="退出" />
     </group>
 
     <item android:title="Communicate">
