替换了首页的banner

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,26 +4,25 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
         <item
             android:id="@+id/nav_collect"
-            android:icon="@drawable/ic_exit_to_app_black_24dp"
-            android:title="退出" />
-        <item
-            android:id="@+id/nav_exit"
-            android:icon="@drawable/ic_exit_to_app_black_24dp"
-            android:title="退出" />
+            android:icon="@drawable/ic_collections_black_24dp"
+            android:title="我的收藏" />
+
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="拍照" />
+                android:id="@+id/nav_clear_cache"
+                android:icon="@drawable/ic_cached_black_24dp"
+                android:title="清除缓存" />
+
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="拍照" />
+                android:id="@+id/nav_exit"
+                android:icon="@drawable/ic_exit_to_app_black_24dp"
+                android:title="退出" />
         </menu>
     </item>
 
