--- a/app/src/main/res/layout/recycler_header_home_banner.xml
+++ b/app/src/main/res/layout/recycler_header_home_banner.xml
@@ -2,11 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
-    <com.youth.banner.Banner
-        android:id="@+id/banner"
+    <com.zhpan.bannerview.BannerViewPager
+        android:id="@+id/banner_view"
         android:layout_width="match_parent"
-        android:layout_height="400pt" />
+        android:layout_height="480pt"
+        android:paddingTop="@dimen/margin_24pt"
+        android:paddingBottom="@dimen/margin_24pt" />
 
 </LinearLayout>
