--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -6,6 +6,14 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/iv_pic"
+        android:layout_width="300pt"
+        android:layout_height="200pt"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/margin_48pt"
+        android:scaleType="centerCrop" />
+
     <TextView
         android:id="@+id/tv_source"
         android:layout_width="300pt"
