--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="250pt"
-    android:background="@color/white"
+    android:background="@color/colorBackground"
     android:orientation="vertical">
 
     <ImageView
