--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,12 @@
 
     <item android:title="Communicate">
         <menu>
+
+            <item
+                android:id="@+id/nav_day_night"
+                android:icon="@drawable/ic_wb_sunny_black_24dp"
+                android:title="夜间模式" />
+
             <item
                 android:id="@+id/nav_clear_cache"
                 android:icon="@drawable/ic_cached_black_24dp"
