--- a/app/src/main/res/layout/widget_base_navigation.xml
+++ b/app/src/main/res/layout/widget_base_navigation.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/navigation_128pt"
     android:background="@color/white">
@@ -8,31 +10,54 @@
         android:id="@+id/iv_back"
         android:layout_width="96pt"
         android:layout_height="96pt"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/margin_12pt"
         android:padding="@dimen/margin_24pt"
-        android:src="@drawable/icon_back" />
+        android:src="@drawable/icon_back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/textColorPrimary"
+        android:textSize="@dimen/textSize_16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="标题" />
 
     <ImageView
         android:id="@+id/iv_collect"
         android:layout_width="96pt"
         android:layout_height="96pt"
-        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/navigation_128pt" />
+        android:layout_marginRight="@dimen/margin_24pt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/iv_share"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/icon_collect" />
 
     <ImageView
         android:id="@+id/iv_share"
         android:layout_width="96pt"
         android:layout_height="96pt"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="@dimen/margin_24pt" />
+        android:layout_marginEnd="@dimen/margin_24pt"
+        android:layout_marginRight="@dimen/margin_24pt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/icon_share" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_1pt"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorDivider" />
+        android:background="@color/colorDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
